fix: align pet image boxes to center to fix margins

--- a/css/outline.css
+++ b/css/outline.css
@@ -512,6 +512,7 @@ h3 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 @-webkit-keyframes pulsate {
